# maptoposter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: art-plan.prompt.md
.github/workflows/: ci.yml
docs/: style-pack.schema.json
docs/dev/: PHASE_01_ROAD_STYLING_REFACTOR.md  PHASE_03_TYPOGRAPHY.md  PHASE_05_PRESETS.md  PLAN_MASTER.md  REMEDIATION_PLAN.md
docs/dev/code-review/: code-review-2026-01-30-v0.1.0-2.md  code-review-2026-01-30-v0.1.0.md
docs/dev/code-reviews/: PHASE_03_BUG_FIXES.md  PHASE_05_TESTING.md
docs/dev/features/: art_style_revised_plan.md  typography_aspect_ratio_fix.md
docs/dev/old/: 2026-01-24-opus-review.md  CODE_REVIEW_2026_01_28.md  PHASE_00_PIPELINE_GROUNDWORK.md  PHASE_01_SECURITY_CACHE.md  PHASE_02_CASING_GLOW.md  PHASE_02_ERROR_HANDLING.md  PHASE_04_CODE_QUALITY.md  PHASE_04_POST_PROCESSING.md  PHASE_04_TEST_COVERAGE.md  PHASE_05_DOCS_BUILD.md  PHASE_06_CICD.md  PHASE_06_DATASHADER_OPTIONAL.md  PHASE_07_OPTIONAL_ENHANCEMENTS.md  PLAN_MASTER.md  art_style.md  python_code_review_plan.md  typography_aspect_ratio_fix.md
examples/style-packs/: botanical.json  british-rail.json  gallery-minimal.json  lcars.json  luxury-atlas.json  nautical.json  neon-glow.json  oxidized.json  technical-drawing.json  vintage-film.json  zen-garden.json
src/maptoposter/: __init__.py  __main__.py  cache.py  cli.py  config.py  fonts.py  geo.py  postprocess.py  py.typed  render.py  render_constants.py  styles.py
src/maptoposter/data/themes/: autumn.json  blueprint.json  british_rail.json  british_rail_refined.json  contrast_zones.json  copper_patina.json  feature_based.json  forest.json  gradient_roads.json  japanese_ink.json  lcars.json  midnight_blue.json  monochrome_blue.json  neon_cyberpunk.json  noir.json  ocean.json  pastel_dream.json  sunset.json  terracotta.json  warm_beige.json
tests/: README.md  __init__.py  test_cache.py  test_cli.py  test_config.py  test_fonts.py  test_geo.py  test_postprocess.py  test_render.py  test_styles.py
