[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maptoposter"
version = "0.1.0"
description = "Generate beautiful, minimalist map posters for any city using OpenStreetMap data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
authors = [
    { name = "MapToPoster Contributors" }
]
keywords = [
    "map",
    "poster",
    "openstreetmap",
    "osm",
    "visualization",
    "cartography",
    "city-map",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "geopandas>=1.0.0",
    "geopy>=2.4.0",
    "matplotlib>=3.8.0",
    "networkx>=3.0",
    "numpy>=2.0.0",
    "osmnx>=2.0.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pyarrow",
    "scipy>=1.13.0",
    "shapely>=2.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[project.scripts]
maptoposter = "maptoposter.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/maptoposter"
Documentation = "https://github.com/your-username/maptoposter#readme"
Repository = "https://github.com/your-username/maptoposter"
Issues = "https://github.com/your-username/maptoposter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/maptoposter"]
include = [
    "src/maptoposter/data/**",
    "src/maptoposter/py.typed",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # Ruff-specific
    "D",      # pydocstyle
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value used in comparison
    "PLR0911",  # Too many return statements
    "PLR0915",  # Too many statements
    "PLC0415",  # Import not at top level (needed for lazy imports)
    "D100",     # Missing docstring in public module
    "D104",     # Missing docstring in public package
    "D105",     # Missing docstring in magic method
    "D107",     # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["maptoposter"]
force-single-line = false
lines-after-imports = 2

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "geopy.*",
    "matplotlib.*",
    "networkx.*",
    "osmnx.*",
    "pandas.*",
    "PIL.*",
    "scipy.*",
    "shapely.*",
    "tqdm.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["src/maptoposter"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
