[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maptoposter"
version = "0.1.0"
description = "Generate beautiful, minimalist map posters for any city using OpenStreetMap data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
authors = [
    { name = "MapToPoster Contributors" }
]
keywords = [
    "map",
    "poster",
    "openstreetmap",
    "osm",
    "visualization",
    "cartography",
    "city-map",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "geopandas>=1.0.0",
    "geopy>=2.4.0",
    "matplotlib>=3.8.0",
    "networkx>=3.0",
    "numpy>=2.0.0",
    "osmnx>=2.0.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pyarrow>=14.0.0",
    "scipy>=1.13.0",
    "shapely>=2.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]
render = [
    "datashader>=0.18.2",
    "numba>=0.59.1",
]

[project.scripts]
maptoposter = "maptoposter.cli:main"

[project.urls]
Homepage = "https://github.com/Iwaschkin/maptoposter"
Documentation = "https://github.com/Iwaschkin/maptoposter#readme"
Repository = "https://github.com/Iwaschkin/maptoposter"
Issues = "https://github.com/Iwaschkin/maptoposter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/maptoposter"]
include = [
    "src/maptoposter/data/**",
    "src/maptoposter/py.typed",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    # Core
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "D",      # pydocstyle
    # Code quality
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # Ruff-specific
    "PERF",   # perflint (performance)
    "FURB",   # refurb (modern Python)
    # Security & safety
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins (shadowing)
    # Type checking
    "TCH",    # flake8-type-checking
    "ANN",    # flake8-annotations
    # Style & consistency
    "N",      # pep8-naming
    "Q",      # flake8-quotes
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "FLY",    # flynt (f-strings)
    "ERA",    # eradicate (commented-out code)
    "PGH",    # pygrep-hooks
    # Logging
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    # Unused
    "ARG",    # flake8-unused-arguments
    # Print/debug
    "T20",    # flake8-print
]
ignore = [
    # Complexity - acceptable for rendering pipeline
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value used in comparison
    "PLR0911",  # Too many return statements
    "PLR0915",  # Too many statements
    "PLR0912",  # Too many branches
    "PLC0415",  # Import not at top level (needed for lazy imports)
    # Docstrings - skip boilerplate
    "D100",     # Missing docstring in public module
    "D104",     # Missing docstring in public package
    "D105",     # Missing docstring in magic method
    "D107",     # Missing docstring in __init__
    # Security - acceptable patterns
    "S311",     # pseudo-random generators (fine for non-crypto)
    # Compatibility with formatter
    "ISC001",   # single-line implicit string concat (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",     # assert allowed in tests
    "ARG001",   # unused arguments (fixtures)
    "ANN",      # annotations optional in tests
    "D",        # docstrings optional in tests
    "PLR2004",  # magic values in tests
]
"src/maptoposter/cli.py" = [
    "T20",      # print allowed in CLI
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["maptoposter"]
force-single-line = false
lines-after-imports = 2

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "geopy.*",
    "matplotlib.*",
    "networkx.*",
    "osmnx.*",
    "pandas.*",
    "PIL.*",
    "scipy.*",
    "shapely.*",
    "tqdm.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["src/maptoposter"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
